fixed horizontal scrolling on maps

--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
 
 #map {
     overflow-x: hidden;
-    width: 100vw;
+    width: 100%;
     margin: 0;
     padding: 0;
 }
